# neurosync

./: .coverage  .flake8  .gitignore  .safety-project.ini  195B_README.md  Pipfile  README.md  architecture.md  explore_stats.py  main.py  muse2_eeg_data.csv  musestreamtest.py  pyproject.toml  requirements.txt  settings.json  visualize_eeg.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: codeql-analysis.yaml  python-ci.yaml
data/: muse2_eeg_data.csv  processed.csv
docs/: architecture.md
docs/evaluation/: stress_test_results.md
docs/evaluation/coverage-report/: coverage.md  coverage.xml
docs/evaluation/coverage-report/html/: class_index.html  function_index.html  index.html  (+5 more)
hardware/: Binary_To_7Segment.sv  EEG_Packet_Parser.sv  NexsysA7_SP.xdc  README.MD  SevenSeg_2Digit_Mux.sv  UART_TX.sv  VGA_640x480_Timing.sv  VGA_EEG_Abstract.sv  coord_gen.sv  fractal_lowres_renderer.sv  fractal_pixel_top.sv  mandelbrot_core.sv  palette_lut.sv  tb_mandelbrot_core.sv  top.sv  uartrx.sv
scripts/: py-lint
software/: Pipfile  pyproject.toml  requirements.txt
software/data/: muse2_eeg_data.csv  processed.csv
software/scripts/: install-liblsl
software/src/: Pipfile  data_processing.py  graphing.py  main.py  transmission.py
software/tests/: conftest.py  eeg_test_sender.py  test_data_processing.py  test_graphing.py  test_main.py  test_transmission.py
software/tests/e2e/: test_csv_mode_e2e.py  test_fpga_packet_format_e2e.py  test_fpga_packet_format_e2e.txt  test_hardware_uart_e2e.py  test_lsl_to_uart_e2e.py
software/tests/integration/: test_csv_pipeline_integration.py  test_fft_pipeline_integration.py  test_fft_to_packet_integration.py  test_graphing_buffer_integration.py  test_packet_round_trip_integration.py  test_transmit_receive_integration.py
software/tests/stress/: test_data_integrity_stress.py  test_fft_pipeline_stress.py  test_packet_encode_stress.py  test_queue_buffer_stress.py  test_serial_write_stress.py  test_windowing_stress.py
software/tests/unit/: test_data_processing.py  test_graphing.py  test_main.py  test_transmission.py
software/tools/: explore_stats.py  musestreamtest.py  visualize_eeg.py
src/: data_processing.py  main.py  transmission.py
src/NeuroSync.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: data_processing_test.py  test_data_processing.py  test_data_processing_backup.py  test_get_data.py  test_transmission.py
tools/: musestreamtest.py  test_csv.py  test_data_processing.py  test_data_processing_backup.py  test_get_data.py  test_get_stats.py  test_to_transform_hz.py  visualize_eeg.py
